--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
-    <title>HTML CSS With Versions Template 2</title>
+    <title>Rocker Furniture Store</title>
 
     <!-- Font -->
     <link
